<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
<modelVersion>4.0.0</modelVersion>
<groupId>org.jlobato.gpro</groupId>
<artifactId>gpro-mybatis</artifactId>
<version>1.1.8.2.RELEASE</version>
<name>GPRO MyBatis Persistence</name>
<description>GPRO Database Persistence using MyBatis</description>
  <dependencies>
	<dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>${junit.version}</version>
		<scope>test</scope>
	</dependency>
	<!--c3p0 0.9.5.2 connection pool -->
	<dependency>
    	<groupId>com.mchange</groupId>
    	<artifactId>c3p0</artifactId>
    	<version>0.9.5.4</version>
		<scope>test</scope>
	</dependency>
	<!--AspectJ -->
	<dependency>
		<groupId>org.aspectj</groupId>
		<artifactId>aspectjweaver</artifactId>
		<version>1.7.4</version>
		<scope>test</scope>
	</dependency>
	
  
	<!--Spring dependencies -->
	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-beans</artifactId>
		<version>${org.springframework.version}</version>
	</dependency>
    <dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-context</artifactId>
  		<version>${org.springframework.version}</version>
	</dependency>
    <dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-jdbc</artifactId>
  		<version>${org.springframework.version}</version>
	</dependency>
	

	<!--MyBatis dependencies -->
	<dependency>
		<groupId>org.mybatis</groupId>
		<artifactId>mybatis</artifactId>
		<version>${org.mybatis.version}</version>
	</dependency>
	<dependency>
		<groupId>org.mybatis</groupId>
		<artifactId>mybatis-spring</artifactId>
		<version>${org.mybatis.spring.version}</version>
	</dependency>
	   <!-- MyBatis Cache -->
	<dependency>
	     <groupId>org.mybatis.caches</groupId>
	     <artifactId>mybatis-ehcache</artifactId>
	     <version>1.2.3</version>
	   </dependency>
	<!--postgresql 9.4+ jdbc driver -->
	<dependency>
		<groupId>org.postgresql</groupId>
		<artifactId>postgresql</artifactId>
		<version>${org.postgresql.version}</version>
	</dependency>
	
	<!-- GproUtils -->
	<dependency>
    	<groupId>org.jlobato.gpro</groupId>
    	<artifactId>gpro-utils</artifactId>
    	<version>${org.jlobato.gpro.version}</version>
	</dependency>
	<!-- GprSheetParser -->
	<dependency>
    	<groupId>org.jlobato.gpro</groupId>
    	<artifactId>gprsheetparser</artifactId>
    	<version>${org.jlobato.gpro.gprsheetparser.version}</version>
	</dependency>	
	
  </dependencies>
  <build>
    <resources>
        <resource>
            <targetPath>.</targetPath>
            <directory>src/main/resources</directory>
        </resource>
    </resources>
    	<plugins>
	    	<plugin>
	    		<groupId>org.mybatis.generator</groupId>
	    		<artifactId>mybatis-generator-maven-plugin</artifactId>
	    		<version>1.3.7</version>
	    		<executions>
	    			<execution>
	    				<id>Generate MyBatis Artifacts</id>
	    				<goals>
	    					<goal>generate</goal>
	    				</goals>
	    			</execution>
	    		</executions>
	    		<configuration>
	    			<verbose>true</verbose>
				    <!-- Para configurar el plugin de mybatis generator y que sobreescriba las clases que se generan -->
	    			<overwrite>true</overwrite>
	    		</configuration>
	    		<dependencies>
	    			<dependency>
	    				<groupId>org.postgresql</groupId>
						<artifactId>postgresql</artifactId>
						<version>${org.postgresql.version}</version>
	    			</dependency>
	    		</dependencies>
	    	</plugin>
	    </plugins>
	    <!-- Metido por eclipse -->
    	<pluginManagement>
    		<plugins>
    			<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
    			<plugin>
    				<groupId>org.eclipse.m2e</groupId>
    				<artifactId>lifecycle-mapping</artifactId>
    				<version>1.0.0</version>
    				<configuration>
    					<lifecycleMappingMetadata>
    						<pluginExecutions>
    							<pluginExecution>
    								<pluginExecutionFilter>
    									<groupId>
    										org.mybatis.generator
    									</groupId>
    									<artifactId>
    										mybatis-generator-maven-plugin
    									</artifactId>
    									<versionRange>
    										[1.3.7,)
    									</versionRange>
    									<goals>
    										<goal>generate</goal>
    									</goals>
    								</pluginExecutionFilter>
    								<action>
    									<ignore></ignore>
    								</action>
    							</pluginExecution>
    						</pluginExecutions>
    					</lifecycleMappingMetadata>
    				</configuration>
    			</plugin>
    		</plugins>
    	</pluginManagement>
  </build>
  
  <!-- Propiedades generales del proyecto -->
  <properties>
  	<junit.version>4.13.1</junit.version>
  	<org.springframework.version>6.0.0</org.springframework.version>
  	<org.jlobato.gpro.version>1.0.0.RELEASE</org.jlobato.gpro.version>
  	<org.jlobato.gpro.gprsheetparser.version>1.0.3.RELEASE</org.jlobato.gpro.gprsheetparser.version>  	  	
  	<org.mybatis.version>3.5.6</org.mybatis.version>
  	<org.mybatis.spring.version>3.0.0</org.mybatis.spring.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <mybatis.generator.jdbcDriver>org.postgresql.Driver</mybatis.generator.jdbcDriver>
    <mybatis.generator.connectionURL>jdbc:postgresql://gprdata-des.yisas.com:5454/gprodata</mybatis.generator.connectionURL>
    <mybatis.generator.userId>gprodata</mybatis.generator.userId>
    <mybatis.generator.password>gprodata</mybatis.generator.password>
	<java.build.version>1.8</java.build.version>
	<java.source.version>1.8</java.source.version>
	<maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>  	
  	<org.postgresql.version>42.7.2</org.postgresql.version>
  </properties>
</project>